# worp

./: 404.html  Cargo.toml  LICENSE  README.md  index.html  print.html  rustfmt.toml  searchindex.js  searchindex.json
worp-client/: Cargo.toml
worp-client/src/: main.rs
worp-dice/: Cargo.toml
worp-dice/benches/: dice-bench.rs
worp-dice/src/: expression.rs  lib.rs  macros.rs  parser.rs
worp-dice/src/compiler/: assembler.rs  bytecode.rs  compiler.rs  compiler_stack.rs  decl_scan.rs  error.rs  expression.rs  expressions.rs  if_statements.rs  loops.rs  mod.rs  operators.rs  scope.rs  scope_stack.rs  upvalue.rs
worp-dice/src/compiler/components/: assembler.rs  mod.rs  scope.rs
worp-dice/src/compiler/expr/: expr_if.rs  expr_loop.rs  expr_op.rs  mod.rs
worp-dice/src/compiler/node_compiler/: expr.rs  expr_assignment.rs  expr_binary_op.rs  expr_block.rs  expr_break.rs  expr_continue.rs  expr_discard.rs  expr_if.rs  expr_unary_op.rs  expr_variable_decl.rs  expr_while.rs  literal.rs  literal_bool.rs  literal_float.rs  literal_int.rs  literal_list.rs  literal_none.rs  literal_string.rs  literal_unit.rs  literal_variable.rs  mod.rs
worp-dice/src/compiler/visitor/: decl_fn.rs  decl_var.rs  expr_assignment.rs  expr_binary_op.rs  expr_block.rs  expr_break.rs  expr_continue.rs  expr_fn_call.rs  expr_if.rs  expr_return.rs  expr_unary_op.rs  expr_variable_decl.rs  expr_while.rs  literal_anonymous_fn.rs  literal_bool.rs  literal_float.rs  literal_int.rs  literal_list.rs  literal_none.rs  literal_string.rs  literal_unit.rs  literal_variable.rs  mod.rs  syntax_node.rs
worp-dice/src/expression/: expression.rs  mod.rs  parser.rs
worp-dice/src/interpreter/: context.rs  error.rs  evaluation.rs  evaluator.rs  mod.rs  symbol.rs  value.rs
worp-dice/src/interpreter/object/: func.rs  instance.rs  integer.rs  key.rs  methods.rs  mod.rs  operator.rs  reference.rs  reflection.rs
worp-dice/src/runtime/: bytecode.rs  error.rs  instruction.rs  mod.rs  runtime.rs  symbol.rs
worp-dice/src/runtime/core/: key.rs  methods.rs  mod.rs  reflection.rs  span.rs  symbol.rs  upvalue.rs  value.rs
worp-dice/src/runtime/interpreter/: bytecode.rs  callframe.rs  context.rs  environment.rs  evaluator.rs  instruction.rs  macros.rs  mod.rs  script.rs  stack.rs
worp-dice/src/runtime/lib/: anonymous.rs  bool.rs  diceset.rs  die.rs  float.rs  fn_closure.rs  fn_native.rs  fn_script.rs  func.rs  int.rs  list.rs  mod.rs  none.rs  object.rs  range.rs  string.rs  unit.rs
worp-dice/src/runtime/machine/: bytecode.rs  instruction.rs  mod.rs  vm.rs
worp-dice/src/runtime/object/: instance.rs  key.rs  mod.rs  reflection.rs
worp-dice/src/runtime/script/: mod.rs  module.rs  script.rs
worp-dice/src/runtime/types/: anonymous.rs  bool.rs  (+7 more)
worp-dice/src/syntax/: _parser.rs  error.rs  expression.rs  mod.rs  parser.rs  span.rs  tree.rs
(+116 files in other folders)
