[package]
name = "worp-client"
version = "0.1.0"
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-executor = "0.3"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = "0.2"
winit = "0.22"

renderer = { path = "../worp-renderer" }