[package]
name = "worp-client"
version = "0.1.0"
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = "0.2"
toml = "0.5"
# tokio = { version = "0.2", features = [ "rt-threaded", "macros" ]}
# winit = "0.22"

worp-core = { path = "../worp-core" }
worp-dice = { path = "../worp-dice" }

# renderer = { path = "../worp-renderer" }
# gui = { path = "../worp-gui" }
