[package]
name = "worp-dice"
version = "0.1.0"
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
gc = { version = "0.3", features = ["derive"] }
id-arena = "2.2"
logos = "0.11"
paste = "1.0"
rand = { version = "0.7", features = ["wasm-bindgen"] }
thiserror = "1.0"

smallvec = "1.4"