[package]
authors = ["Joshua Rodgers <bytemr@gmail.com>"]
edition = "2018"
name = "worp-dice"
version = "0.1.0"

[dependencies]
bytes = "0.5"
id-arena = "2.2"
logos = "0.11"
paste = "1.0"
rand = {version = "0.7", features = ["wasm-bindgen"]}
thiserror = "1.0"
uuid = {version = "0.8", features = ["v4", "wasm-bindgen"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "dice-bench"
